changed file names

--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
     "content_scripts": [
       {
         "matches": ["*://*.google.com/*"],
-        "js": ["borderify.js"]
+        "js": ["darkMode.js"]
       }
     ]
   
